templates/netpol/egress-mqtt/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ${APP}-egress-mosquitto
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ${APP}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-automation
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mosquitto
      ports:
        - port: 6379
          protocol: TCP
